--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,22 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- OG -->
+    <meta content="Dana's Portfolio" property="og:title" />
+    <meta content="website" property="og:type" />
+    <meta content="https://dana-portfolio.web.app/" property="og:url" />
+    <meta content="프론트엔드 개발자 이다나입니다." property="og:description" />
+    <meta content="banner.png" property="og:image" />
+
     <title>DANA Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;600;700&display=swap" rel="stylesheet" />
     <!-- 구글아이콘 -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
